Fix "issue edit box is not centered"
* Add new auto-center mixin

* Add mixins file to compilation

* Change `popup` class to use auto-center mixin

* Fix mobile

* Add body scroll lock

--- a/client/styles/_issues.sass
+++ b/client/styles/_issues.sass
@@ -788,7 +788,6 @@ $issue-sticky-hide-mobile-offset: 28px
       right: 36px
   +desktop
     width: 505px
-    left: calc(50% - (505px / 2))
     padding: 0
   text-align: left !important
   .button
